tests/CompilerTests/data/BadCallByReferenceTest.stderr.expect
./data/BadCallByReferenceTest.xpl:4:7: error: cannot pass constant by reference
./data/BadCallByReferenceTest.xpl:error: input contains errors
