tests/CompilerTests/data/BadCallByReferenceTest.xpl
void inc(integer &x) {x++;}

string[] main() {
  inc(1);
}
